--- version 0.4 (xx/xx/xxxx) ---

Update to allow a single mesh to contain more than 64k vertices (32 bit
indices). Applications will require the CIrrMeshWriter.cpp & 
CIrrMeshFileLoader.cpp patch.

bug fix - When manual entering directory paths, incorrect path was being 
returned by "CheckDirectory".

Added "Blender Version", "Platform uname", and iwalktest/imeshcvt env
variables to irrb.log file.

--- version 0.3 (02/10/2009) ---
Fixed "vertex colors" - Blender vertex colors are written if vertex color
exists and:
    * Face doesn't have a blender material assigned or
    * Material is assigned and has "VCol Paint" checked.

Added option to create directory if mesh, image, or scene path doesn't
exist.

Added logic to abort the export if error occurs when opening irrb.log file.

Updated to use substitution variables ($1, $2) in IWALKTEST environment
variable:
    $1 - Scene File (full path)
    $2 - Relative Base Directory
0.2 IWALKTEST environment variables that used "iwalktest.exe" should be 
updated to:
    ..iwalktest -i $1 -a $2

Added Blender "procedural" material as a face property - two faces in the 
same mesh with different procedural materials will cause two meshbuffers
to be generated.  Used to index Blender ID properties for Irrlicht 
specific material attributes.

Added "Irrlicht Version" target to handle future binary mesh format changes.

Changed irrb license from gpl to zlib/libpng.

Allow billboard & skybox images to be packed.

Added "billboard" exporting. Requirements:
    ID Property "irrb|inodetype=billboard".
    UV Mapped Plane (quad) with a single texture.
    Billboard size is based on the quads scale:
        Width = Blender X scale
        Height = Blender Z scale

Added "skybox" exporting. Requirements:
    ID Property "irrb|inodetype=skybox".
    UV Mapped Cube with 6 separate textures.
    Quad Faces with normals facing in.

Std attributes & user data now extracted from Blender ID Properties ['irrb']
